turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:46: error: '=' expected but ':' found.
	def init():Array[Array[Array[Int]]]:Unit= {
                                           ^Turmite:72: error: illegal start of simple expression
	override def run() {
^